--- a/index.html
+++ b/index.html
@@ -5,12 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CountDown Timer</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js defer"></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
-    <h1>Countdown to my birthday</h1>
+    <h6>Next birthday</h6>
     <div class="countdown-container">
-        
+        <div class="countdown-el days-c">
+            <p class="big-text" id="days">0</p>
+            <span>days</span>
+        </div>
+        <div class="countdown-el hours-c">
+            <p class="big-text" id="hours">0</p>
+            <span>hours</span>
+        </div>
+        <div class="countdown-el mins-c">
+            <p class="big-text" id="mins">0</p>
+            <span>mins</span>
+        </div>
+        <div class="countdown-el seconds-c">
+            <p class="big-text" id="seconds">0</p>
+            <span>seconds</span>
+        </div>
     </div>
 </body>
 </html>
