--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <div class="countdown-el mins-c">
             <p class="big-text" id="mins">0</p>
-            <span>mins</span>
+            <span>mins3</span>
         </div>
         <div class="countdown-el seconds-c">
             <p class="big-text" id="seconds">0</p>
