--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
     <div class="countdown-container">
         <div class="countdown-el days-c">
             <p class="big-text" id="days">0</p>
-            <span>days</span>
+            <span>Days</span>
         </div>
         <div class="countdown-el hours-c">
             <p class="big-text" id="hours">0</p>
-            <span>hours</span>
+            <span>Hours</span>
         </div>
         <div class="countdown-el mins-c">
             <p class="big-text" id="mins">0</p>
-            <span>mins3</span>
+            <span>Mins</span>
         </div>
         <div class="countdown-el seconds-c">
             <p class="big-text" id="seconds">0</p>
-            <span>seconds</span>
+            <span>Seconds</span>
         </div>
     </div>
 </body>
